--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,8 +1,23 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity" >
+    tools:context=".MainActivity"
+    android:orientation="vertical" >
+        
+    <com.meetme.android.horizontallistview.HorizontalListView
+	   xmlns:widget="http://schemas.android.com/apk/res-auto"
+	   xmlns:android="http://schemas.android.com/apk/res/android"
+	   android:id="@+id/HorizontalListView"
+	   android:layout_width="fill_parent"
+	   android:layout_height="175dip"
+	   android:clipToPadding="false"
+	   android:fitsSystemWindows="true" 
+	   android:choiceMode = "singleChoice"
+	   android:soundEffectsEnabled="true"
+	   android:fadeScrollbars="true"
+       android:fadingEdgeLength="5dp"
+       android:requiresFadingEdge="horizontal" />
     
     <ListView
         android:id="@+id/list"
@@ -18,10 +33,11 @@
         android:paddingLeft="10dip"
         android:paddingRight="10dip"
         android:scrollingCache="true"
-        android:soundEffectsEnabled="true">
+        android:soundEffectsEnabled="true"
+        android:layout_below="@+id/HorizontalListView">
 
     </ListView>
     
     
    
-</LinearLayout> 
+</RelativeLayout> 
