--- a/res/drawable/shadow.xml
+++ b/res/drawable/shadow.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" >
-    <gradient
-       android:startColor="#FFFFFF"
-       android:centerColor="#E3E3E3"
-       android:endColor="#858585" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+
+	<gradient 
+	    android:startColor="#00000000"
+	    android:centerColor="#11000000"
+	    android:endColor="#33000000"/>
 </shape>
