--- a/res/layout/activity_log.xml
+++ b/res/layout/activity_log.xml
@@ -6,15 +6,11 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".FBActivity" 
-    android:clipToPadding="false"
-	android:fitsSystemWindows="true">
+    tools:context=".LogActivity" >
 
     <TextView
-        android:id="@+id/FBwelcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
-
 
 </RelativeLayout>
