--- a/res/layout/activity_fb.xml
+++ b/res/layout/activity_fb.xml
@@ -1,20 +1,27 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".FBActivity" 
-    android:clipToPadding="false"
-	android:fitsSystemWindows="true">
-
-    <TextView
-        android:id="@+id/FBwelcome"
-        android:layout_width="wrap_content"
+    tools:context=".MainActivity"
+    android:orientation="vertical" >
+        
+    <ListView
+        android:id="@+id/fbList"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:choiceMode="singleChoice"
+        android:clipToPadding="false"
+        android:divider="@drawable/custom_divider"
+        android:dividerHeight="0.10dp"
+        android:fadeScrollbars="true"
+        android:fastScrollEnabled="true"
+        android:fitsSystemWindows="true"
+        android:paddingLeft="10dip"
+        android:paddingRight="10dip"
+        android:scrollingCache="true"
+        android:soundEffectsEnabled="true">
 
+    </ListView>
+    
 
-</RelativeLayout>
+</LinearLayout> 
