--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -8,22 +8,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".LoginActivity" >
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="68dp"
-        android:text="@string/hello_world" />
-
-    <Button
-        android:id="@+id/fb_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="66dp"
-        android:layout_toRightOf="@+id/textView1" />
+	<com.facebook.widget.LoginButton
+	    android:id="@+id/authButton"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_alignParentLeft="true"
+	    android:layout_alignParentRight="true"
+	    android:layout_alignParentTop="true"
+	    android:layout_marginTop="126dp" />
 
 </RelativeLayout>
