--- a/res/layout/fb_friend_layout.xml
+++ b/res/layout/fb_friend_layout.xml
@@ -12,9 +12,7 @@
         android:layout_marginTop="10dip"
         android:layout_marginBottom="5dip"
         android:layout_centerVertical="true" />
-    
  
-    
     <TextView
         android:id="@+id/friend_name"
         android:layout_width="wrap_content"
@@ -25,18 +23,11 @@
         android:textColor="#4A4A4A"
         android:textSize="18sp"
         android:layout_marginLeft="10dip" 
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignWithParentIfMissing="true"
         android:fontFamily="sans-serif-condensed" />
     
-    <TextView
-        android:id="@+id/friend_presence"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_centerVertical="true" 
-        android:textColor="#4A4A4A"
-        android:textSize="14sp"
-        android:layout_marginLeft="10dip" 
-        android:fontFamily="sans-serif-condensed"
-        android:layout_below="@+id/friend_name" />
+
  
 </RelativeLayout>
