--- a/res/menu/fb.xml
+++ b/res/menu/fb.xml
@@ -1,9 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
+    
+    <item 
+        android:id="@+id/fb_logout"
         android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:title="Logout"/>
 
 </menu>
