--- a/res/menu/fb.xml
+++ b/res/menu/fb.xml
@@ -1,5 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
+    <item android:id="@+id/action_search"
+          android:title="Search"
+          android:icon="@drawable/ic_menu_search"
+          android:showAsAction="always"
+          android:actionViewClass="android.widget.SearchView" />
     
     <item 
         android:id="@+id/fb_logout"
