--- a/res/values/themes_apptheme.xml
+++ b/res/values/themes_apptheme.xml
@@ -28,6 +28,10 @@
 
     <item name="android:fastScrollThumbDrawable">@drawable/apptheme_fastscroll_thumb_holo</item>
    
+    <item name="android:buttonStyle">@style/ButtonAppTheme</item>
+
+	<item name="android:imageButtonStyle">@style/ImageButtonAppTheme</item>
+    
   </style>
 
 </resources>
