--- a/res/layout/activity_welcome.xml
+++ b/res/layout/activity_welcome.xml
@@ -14,7 +14,7 @@
         android:layout_height="120dip"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp" />
+        android:layout_marginTop="90dp" />
     
     <TextView
         android:id="@+id/c_welcome_text"
@@ -36,7 +36,7 @@
         android:text="welcome"
         android:layout_below="@id/c_welcome_text"
         android:textSize="18sp"
-        android:layout_marginTop="40dip"
+        android:layout_marginTop="30dip"
         android:textAlignment="center"/>
 
 	<Button
@@ -46,6 +46,27 @@
 	    android:layout_below="@+id/c_welcome_info"
 	    android:text="Explore"
 	    android:gravity="center"
-	    android:layout_marginTop="20dip" />
+	    android:layout_marginTop="30dip" />
+	
+
+	<ProgressBar
+	    android:id="@+id/progressBar1"
+	    style="?android:attr/progressBarStyleHorizontal"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_alignLeft="@+id/c_welcome_button"
+	    android:layout_below="@+id/c_welcome_button"
+	    android:visibility="gone" />
+	
+	<TextView
+        android:id="@+id/progress_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-thin"
+        android:text="setting things up..."
+        android:layout_below="@id/progressBar1"
+        android:textSize="14sp"
+        android:textAlignment="center"
+        android:visibility="gone"/>
 
 </RelativeLayout>
