--- a/res/layout/activity_friend_detail.xml
+++ b/res/layout/activity_friend_detail.xml
@@ -45,7 +45,6 @@
 		            android:id="@+id/f_detail_header_name"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
-		            android:text="friend_name"
 		            android:layout_marginLeft="12dip"
 		            android:layout_marginTop="30dp"
 		            android:textAlignment="textStart"
@@ -60,6 +59,31 @@
 		            android:textColor="#FFF"
 		            android:layout_marginLeft="12dip"
 		            android:textSize="16sp"/>
+		        
+		        <LinearLayout 
+		            android:id="@+id/f_detail_header_birthday_layout"
+		            android:layout_width="match_parent"
+		            android:layout_height="wrap_content"
+		            android:orientation="horizontal"
+		            android:visibility="gone">
+		            
+		            <ImageView 
+			            android:id="@+id/f_detail_header_birthday_icon"
+			            android:layout_width="50dip"
+			            android:layout_height="50dip"
+			            android:src="@drawable/ic_action_birthday"/>
+		            
+		            <TextView
+		                android:id="@+id/f_detail_header_birthday_text"
+		                android:layout_width="match_parent"
+		                android:layout_height="match_parent"
+		                android:fontFamily="sans-serif-light"
+		                android:textColor="#FFF"
+		                android:textSize="16sp" 
+		                android:gravity="center_vertical"/>
+		            
+		        </LinearLayout>
+		        
 		        
 			</LinearLayout>
 		</LinearLayout>
@@ -91,6 +115,7 @@
 		            android:textColor="#34AADC"
 		            android:textSize="20sp"
 		            android:layout_marginLeft="20dip" 
+		            android:layout_marginRight="20dip" 
 		            android:fontFamily="sans-serif-condensed"/>
                 
                 <View 
@@ -109,6 +134,22 @@
 		            android:singleLine="true"
 		            android:ellipsize="end" 
 		            android:fontFamily="sans-serif-light"/>
+				
+
+					<TextView 
+			            android:id="@+id/f_detail_less_item_message"
+			            android:layout_width="fill_parent"
+			            android:layout_height="wrap_content"
+			            android:textSize="18sp"
+			            android:layout_marginLeft="20dip"
+			            android:layout_marginTop="50dip"
+			            android:layout_marginRight="20dip" 
+			            android:text="fkd"
+			            android:fontFamily="sans-serif-light"
+			            android:textStyle="italic"
+			            android:visibility="gone"/>
+				
+				
 			</LinearLayout>
 			
             <LinearLayout
