--- a/res/layout/info_item_layout.xml
+++ b/res/layout/info_item_layout.xml
@@ -10,9 +10,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
+        android:gravity="center_vertical"
         android:textColor="#4A4A4A"
         android:textSize="20sp"
-        android:layout_marginLeft="10dip" 
-        android:fontFamily="sans-serif-condensed" />
+        android:fontFamily="sans-serif-condensed" 
+        android:minHeight="?android:attr/listPreferredItemHeight" />
     
 </LinearLayout>
