--- a/res/layout/activity_friend_detail.xml
+++ b/res/layout/activity_friend_detail.xml
@@ -98,7 +98,8 @@
             android:id="@+id/f_detail_content_main"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="40dip">
 	        	    
             <LinearLayout
                 android:id="@+id/f_detail_username_layout"
