--- a/res/layout/activity_fb.xml
+++ b/res/layout/activity_fb.xml
@@ -5,6 +5,13 @@
     tools:context=".MainActivity"
     android:orientation="vertical" >
 
+        <com.google.android.gms.ads.AdView android:id="@+id/adView"
+        				 xmlns:ads="http://schemas.android.com/apk/res-auto"
+                         android:layout_width="match_parent"
+                         android:layout_height="wrap_content"
+                         ads:adUnitId="@string/admob_id"
+                         ads:adSize="SMART_BANNER"/> 
+                         
     <ListView
         android:id="@+id/fbList"
         android:layout_width="fill_parent"
