--- a/res/layout/activity_friend_detail.xml
+++ b/res/layout/activity_friend_detail.xml
@@ -5,6 +5,12 @@
     android:orientation="vertical"
   	android:fitsSystemWindows="true">
     
+        <com.google.android.gms.ads.AdView android:id="@+id/adView"
+        				 xmlns:ads="http://schemas.android.com/apk/res-auto"
+                         android:layout_width="match_parent"
+                         android:layout_height="wrap_content"
+                         ads:adUnitId="@string/admob_id"
+                         ads:adSize="SMART_BANNER"/> 
     
     <FrameLayout
         android:layout_width="match_parent"
