--- a/res/layout/activity_graph.xml
+++ b/res/layout/activity_graph.xml
@@ -6,6 +6,13 @@
     tools:context=".GraphActivity" 
     android:orientation="vertical">
 
+        <com.google.android.gms.ads.AdView android:id="@+id/adView"
+        				 xmlns:ads="http://schemas.android.com/apk/res-auto"
+                         android:layout_width="match_parent"
+                         android:layout_height="wrap_content"
+                         ads:adUnitId="@string/admob_id"
+                         ads:adSize="SMART_BANNER"/> 
+    
 	<com.echo.holographlibrary.PieGraph
 	        android:layout_width="match_parent"
 	        android:layout_height="200dip"
