--- a/res/layout/activity_info.xml
+++ b/res/layout/activity_info.xml
@@ -8,6 +8,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".InfoActivity" >
 
+    <com.google.android.gms.ads.AdView android:id="@+id/adView"
+    				 xmlns:ads="http://schemas.android.com/apk/res-auto"
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     ads:adUnitId="@string/admob_id"
+                     ads:adSize="SMART_BANNER"/> 
+                         
     <ListView
         android:id="@+id/infoList"
         android:layout_width="match_parent"
