--- a/res/layout/activity_friend_detail.xml
+++ b/res/layout/activity_friend_detail.xml
@@ -118,7 +118,7 @@
 		            android:id="@+id/f_detail_username_header"
 		            android:layout_width="fill_parent"
 		            android:layout_height="wrap_content"
-		            android:text="Username"
+		            android:text="@string/username"
 		            android:textColor="#34AADC"
 		            android:textSize="20sp"
 		            android:layout_marginLeft="20dip" 
@@ -156,7 +156,7 @@
 		            android:id="@+id/f_detail_birthday_header"
 		            android:layout_width="fill_parent"
 		            android:layout_height="wrap_content"
-		            android:text="Birthday"
+		            android:text="@string/birthday"
 		            android:textColor="#34AADC"
 		            android:textSize="20sp"
 		            android:layout_marginLeft="20dip" 
@@ -192,7 +192,7 @@
 		            android:id="@+id/f_detail_education_header"
 		            android:layout_width="fill_parent"
 		            android:layout_height="wrap_content"
-		            android:text="Education"
+		            android:text="@string/education"
 		            android:textColor="#34AADC"
 		            android:textSize="20sp"
 		            android:layout_marginLeft="20dip" 
@@ -219,7 +219,7 @@
 		            android:id="@+id/f_detail_work_header"
 		            android:layout_width="fill_parent"
 		            android:layout_height="wrap_content"
-		            android:text="Work"
+		            android:text="@string/work"
 		            android:textColor="#34AADC"
 		            android:textSize="20sp"
 		            android:layout_marginLeft="20dip" 
@@ -247,7 +247,7 @@
 		            android:id="@+id/f_detail_currentloc_header"
 		            android:layout_width="fill_parent"
 		            android:layout_height="wrap_content"
-		            android:text="Current Location"
+		            android:text="@string/curLoc"
 		            android:textColor="#34AADC"
 		            android:textSize="20sp"
 		            android:layout_marginLeft="20dip" 
@@ -283,7 +283,7 @@
 		            android:id="@+id/f_detail_hometown_header"
 		            android:layout_width="fill_parent"
 		            android:layout_height="wrap_content"
-		            android:text="Hometown"
+		            android:text="@string/hometown"
 		            android:textColor="#34AADC"
 		            android:textSize="20sp"
 		            android:layout_marginLeft="20dip" 
