--- a/res/layout/activity_welcome.xml
+++ b/res/layout/activity_welcome.xml
@@ -23,7 +23,6 @@
         android:textAlignment="gravity"
         android:gravity="center"
         android:fontFamily="sans-serif-thin"
-        android:text="welcome"
         android:layout_below="@id/c_welcome_photo"
         android:textSize="28sp"
         android:layout_marginTop="20dip"/>
@@ -33,7 +32,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-thin"
-        android:text="welcome"
         android:gravity="fill_horizontal"
         android:layout_gravity="left"
         android:layout_below="@id/c_welcome_text"
@@ -46,7 +44,7 @@
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:layout_below="@+id/c_welcome_info"
-	    android:text="Get Started"
+	    android:text="@string/getStarted"
 	    android:gravity="center"
 	    android:layout_marginTop="30dip"
 	    android:background="@color/skyBlue"
@@ -68,7 +66,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-thin"
-        android:text="setting things up..."
+        android:text="@string/settingThings"
         android:layout_below="@id/progressBar1"
         android:textSize="14sp"
         android:textAlignment="center"
