--- a/res/menu/contact_detail.xml
+++ b/res/menu/contact_detail.xml
@@ -9,12 +9,12 @@
 	
 	<item
            android:id="@+id/menu_share"
-           android:title="Share"
+           android:title="@string/share"
            android:icon="@drawable/ic_menu_share"/>
 	
 	<item
             android:id="@+id/menu_edit"
-            android:title="Edit"
+            android:title="@string/edit"
             android:icon="@drawable/ic_action_edit"/>
 
 </menu>
